@@ -229,6 +229,11 @@ PyBuffer_New(Py_ssize_t size)
 static PyObject *
 buffer_new(PyTypeObject *type, PyObject *args, PyObject *kw)
 {
+	if (Py_Py3kWarningFlag &&
+	    PyErr_WarnEx(PyExc_DeprecationWarning,
+	    "buffer will be removed in 3.x", 1) < 0)
+		return NULL;
+	
 	PyObject *ob;
 	Py_ssize_t offset = 0;
 	Py_ssize_t size = Py_END_OF_BUFFER;
